[gd_scene load_steps=6 format=3 uid="uid://cyuchsm8aem2e"]

[ext_resource type="Script" path="res://scripts/killzone.gd" id="1_e1o8s"]
[ext_resource type="AudioStream" uid="uid://c3078gs6syauc" path="res://assets/sounds/hurt.wav" id="2_7y8k4"]

[sub_resource type="Animation" id="Animation_4mnke"]
resource_name = "HurtSound"
length = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0bvfv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_obhd6"]
_data = {
"HurtSound": SubResource("Animation_4mnke"),
"RESET": SubResource("Animation_0bvfv")
}

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_e1o8s")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_obhd6")
}

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_7y8k4")
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
